--- a/src/styles/pag3.css
+++ b/src/styles/pag3.css
@@ -1,82 +1,74 @@
-body{
-    background-color:#023e19;
-    color:#ffffff
+body {
+  background-color: #023e19;
+  color: #ffffff;
 }
 
-
-.container{
-    width: 1216px;
-    margin: 0 auto;
+.container {
+  width: 1216px;
+  margin: 0 auto;
 }
-.Cabeçalho{
-    text-align: center;
-    margin: 0 auto;
-    
+.cabecalho {
+  text-align: center;
+  margin: 0 auto;
 }
-.Cabeçalho img{
-    width: 200px;
-    margin-top: 50px;
+.cabecalho img {
+  width: 200px;
+  margin-top: 50px;
 }
 
-.Agradecimento{
-    text-align: center;
-    height: auto;
-    width: 800px;
-    align-items: center;
-    font-size: 20px;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-    }
-
-.cor{
-    color: rgb(102, 102, 102);
+.agradecimento {
+  text-align: center;
+  height: auto;
+  width: 800px;
+  align-items: center;
+  font-size: 20px;
+  margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.icons img{
-    width: 45px;
-    margin-left: 20px;
-}
-.icons{
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    width: 200px;
-    margin-top: 50px;
+.cor {
+  color: rgb(102, 102, 102);
 }
 
-.faix img{
-    display: flex;
-    padding-top: 25px;
-    position: relative;
-    margin: 0 auto;
-    width: 900px;
-    height: 8px;
-    
-
+.icons img {
+  width: 45px;
+  margin-left: 20px;
 }
-.but
-       {
-           text-decoration: none;
-           color: #ffffff;
-           border: 2px solid #25571d;
-           border-radius: 8px;
-           background-color: #1e5017;
-           font-family: Arial, Helvetica, sans-serif;
-           cursor: pointer;
-           padding: 10px;
-           font-size: 20px;
-           width: 140px;
-           height: 40px;
-           margin: 0 auto;
-           border-width: 2px;
-           border-style: solid;
-           margin-top: 30px;
-           font-family: 'Trebuchet MS';
-           transition: 0.5s ease-out;
-           margin-top: 13%;
-           display: flex;
-           justify-content: center;
-       }
+.icons {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  width: 200px;
+  margin-top: 50px;
+}
 
-    
-      
+.faix img {
+  display: flex;
+  padding-top: 25px;
+  position: relative;
+  margin: 0 auto;
+  width: 900px;
+  height: 8px;
+}
+.but {
+  text-decoration: none;
+  color: #ffffff;
+  border: 2px solid #25571d;
+  border-radius: 8px;
+  background-color: #1e5017;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 20px;
+  width: 140px;
+  height: 40px;
+  margin: 0 auto;
+  border-width: 2px;
+  border-style: solid;
+  margin-top: 30px;
+  font-family: 'Trebuchet MS';
+  transition: 0.5s ease-out;
+  margin-top: 13%;
+  display: flex;
+  justify-content: center;
+}
