--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,99 +1,90 @@
 * {
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #00471B;
-    font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
-
+  background-color: #00471b;
+  font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
 }
 
-.Cabecalho {
-    color: #fff;
-    display: flex;
-    font-size: 10vb;
-    font-size: 10vi;
-    margin-top: 50px;
-    font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
-    z-index: 10px;
+.cabecalho {
+  color: #fff;
+  display: flex;
+  font-size: 10vb;
+  font-size: 10vi;
+  margin-top: 50px;
+  font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
+  z-index: 10px;
 }
 
 .ipt {
-    background-color:#023e19;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-    height: 30vh;
-    min-height:30vh ;
-    border-radius:   20px;
-    flex-direction: column;
-  
-    transition: transform 0.3s ease; 
-    transform: scale(1);  
-    
+  background-color: #023e19;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height: 30vh;
+  min-height: 30vh;
+  border-radius: 20px;
+  flex-direction: column;
+
+  transition: transform 0.3s ease;
+  transform: scale(1);
 }
 
 .Logo:hover {
-    scale: 1.1;
-    transition: 0.5s;
+  scale: 1.1;
+  transition: 0.5s;
 }
-
 
 .ResetS {
-    font-size: 1.4vw;
-    color: rgb(181, 181, 181);  
-    text-decoration:none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
+  font-size: 1.4vw;
+  color: rgb(181, 181, 181);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 
 .nome {
- height: 10%;
-    margin: 2%;
-    font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
-    border-radius: 10px;
-    border-style:solid;
-    padding-left: 10px;
-    color: rgb(0, 0, 0);
-    background-color:rgb(255, 255, 255);
-    border-color:#025422;
-    width: 60%;
-    
+  height: 10%;
+  margin: 2%;
+  font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
+  border-radius: 10px;
+  border-style: solid;
+  padding-left: 10px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  border-color: #025422;
+  width: 60%;
 }
 
-.nome3{
-margin-top: 7%;
-height: 16%;
-width: 80%;
-cursor: pointer;
-background-color:#00471B;
-border-color:#033818;
-color: #dedede;
-font-size: calc(1.5vh + 1.5vi);
-padding: 5px;
-
-
-
+.nome3 {
+  margin-top: 7%;
+  height: 16%;
+  width: 80%;
+  cursor: pointer;
+  background-color: #00471b;
+  border-color: #033818;
+  color: #dedede;
+  font-size: calc(1.5vh + 1.5vi);
+  padding: 5px;
 }
 
 .nome::placeholder {
-    color:rgb(210, 210, 210);
-    font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
-  }
-.Logo{
-  display:block; 
+  color: rgb(210, 210, 210);
+  font-family: 'nba-milwaukee-bucks-2015-regular', sans-serif;
+}
+.Logo {
+  display: block;
   height: 15%;
   width: 15%;
   align-items: flex-start;
 }
 
 .nome3:hover {
-    scale: 1.05;
-    transition: 0.5s;
+  scale: 1.05;
+  transition: 0.5s;
 }
